/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { act, render } from '@testing-library/react';

import { LoadDataView } from './load-data-view';

jest.mock('../../utils/sampler', () => ({
  ...jest.requireActual('../../utils/sampler'),
  getProxyOverlordModules: () => Promise.resolve(['druid-kafka-indexing-service']),
}));

describe('LoadDataView', () => {
  it('matches snapshot streaming', async () => {
    const { container } = render(
      <LoadDataView
        mode="streaming"
        goToView={() => {}}
        openSupervisorSubmit={() => {}}
        openTaskSubmit={() => {}}
      />,
    );
    await act(() => Promise.resolve()); // Let the (mocked) overlord module request resolve
    expect(container.firstChild).toMatchSnapshot();
  });

  it('matches snapshot batch', async () => {
    const { container } = render(
      <LoadDataView
        mode="batch"
        goToView={() => {}}
        openSupervisorSubmit={() => {}}
        openTaskSubmit={() => {}}
      />,
    );
    await act(() => Promise.resolve()); // Let the (mocked) overlord module request resolve
    expect(container.firstChild).toMatchSnapshot();
  });
});
