// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoadDataView matches snapshot batch 1`] = `
<div
  class="load-data-view app-view welcome"
>
  <div
    class="step-nav"
  >
    <div
      class="step-nav-inner"
    >
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Connect and parse raw data
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button bp6-active welcome"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Start
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled connect"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Connect
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled parser"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Parse data
            </span>
          </button>
        </div>
      </div>
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Transform data and configure schema
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button bp6-disabled timestamp"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Parse time
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled transform"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Transform
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled filter"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Filter
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled schema"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Configure schema
            </span>
          </button>
        </div>
      </div>
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Tune parameters
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button bp6-disabled partition"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Partition
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled tuning"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Tune
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled publish"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Publish
            </span>
          </button>
        </div>
      </div>
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Verify and submit
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button spec"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-manually-entered-data"
            >
              <svg
                data-icon="manually-entered-data"
              />
            </span>
            <span
              class="bp6-button-text"
            >
              Edit spec
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="main"
  >
    <div
      class="ingestion-cards"
    >
      <div
        class="ingestion-card disabled bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:s3"
          src="/some/base_url/assets/s3.png"
        />
        <p>
          Amazon S3
        </p>
      </div>
      <div
        class="ingestion-card disabled bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:azureStorage"
          src="/some/base_url/assets/azure-storage.png"
        />
        <p>
          Azure Data Lake
        </p>
      </div>
      <div
        class="ingestion-card disabled bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:google"
          src="/some/base_url/assets/google.png"
        />
        <p>
          Google Cloud Storage
        </p>
      </div>
      <div
        class="ingestion-card disabled bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:delta"
          src="/some/base_url/assets/delta.png"
        />
        <p>
          Delta Lake
        </p>
      </div>
      <div
        class="ingestion-card disabled bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:hdfs"
          src="/some/base_url/assets/hdfs.png"
        />
        <p>
          HDFS
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:druid"
          src="/some/base_url/assets/druid.png"
        />
        <p>
          Reindex from Druid
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:http"
          src="/some/base_url/assets/http.png"
        />
        <p>
          HTTP(s)
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:local"
          src="/some/base_url/assets/local.png"
        />
        <p>
          Local disk
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for index_parallel:inline"
          src="/some/base_url/assets/inline.png"
        />
        <p>
          Paste data
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for example"
          src="/some/base_url/assets/example.png"
        />
        <p>
          Example data
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for other"
          src="/some/base_url/assets/other.png"
        />
        <p>
          Other
        </p>
      </div>
    </div>
  </div>
  <div
    class="control"
  >
    <div
      class="bp6-form-group"
    >
      <div
        class="bp6-form-content"
      >
        <div
          class="bp6-callout bp6-callout-has-body-content"
        >
          <p>
            Please specify where your raw data is located.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadDataView matches snapshot streaming 1`] = `
<div
  class="load-data-view app-view welcome"
>
  <div
    class="step-nav"
  >
    <div
      class="step-nav-inner"
    >
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Connect and parse raw data
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button bp6-active welcome"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Start
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled connect"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Connect
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled parser"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Parse data
            </span>
          </button>
        </div>
      </div>
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Transform data and configure schema
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button bp6-disabled timestamp"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Parse time
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled transform"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Transform
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled filter"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Filter
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled schema"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Configure schema
            </span>
          </button>
        </div>
      </div>
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Tune parameters
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button bp6-disabled partition"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Partition
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled tuning"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Tune
            </span>
          </button>
          <button
            class="bp6-button bp6-disabled publish"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp6-button-text"
            >
              Publish
            </span>
          </button>
        </div>
      </div>
      <div
        class="step-section"
      >
        <div
          class="step-nav-l1"
        >
          Verify and submit
        </div>
        <div
          class="bp6-button-group step-nav-l2"
        >
          <button
            class="bp6-button spec"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-manually-entered-data"
            >
              <svg
                data-icon="manually-entered-data"
              />
            </span>
            <span
              class="bp6-button-text"
            >
              Edit spec
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="main"
  >
    <div
      class="ingestion-cards"
    >
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for kafka"
          src="/some/base_url/assets/kafka.png"
        />
        <p>
          Apache Kafka
        </p>
      </div>
      <div
        class="ingestion-card disabled bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for kinesis"
          src="/some/base_url/assets/kinesis.png"
        />
        <p>
          Amazon Kinesis
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for azure-event-hubs"
          src="/some/base_url/assets/azure-event-hubs.png"
        />
        <p>
          Azure Event Hub
        </p>
      </div>
      <div
        class="ingestion-card bp6-card bp6-elevation-1 bp6-interactive"
      >
        <img
          alt="Ingestion tile for other"
          src="/some/base_url/assets/other.png"
        />
        <p>
          Other
        </p>
      </div>
    </div>
  </div>
  <div
    class="control"
  >
    <div
      class="bp6-form-group"
    >
      <div
        class="bp6-form-content"
      >
        <div
          class="bp6-callout bp6-callout-has-body-content"
        >
          <p>
            Please specify where your raw data is located.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
